<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"

        tools:context=".MainActivity">

    <ImageView
            android:src="@mipmap/ic_launcher"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:text="@string/text_hello"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
    />

    <Button
            android:id="@+id/main_button_toast"
            android:text="@string/text_button_toast"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:text="@string/title_form"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:text="@string/text_form_q1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
    />

    <EditText
            android:id="@+id/main_edittext_firstname"
            android:hint="@string/text_form_q1_hint"
            android:maxLines="1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <TextView
            android:text="@string/text_form_q2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
    />

    <RatingBar
            android:id="@+id/ratingBar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" android:stepSize="1"/>

    <TextView
            android:text="@string/text_form_q3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
    />



    <Button
            android:id="@+id/main_button_form"
            android:text="@string/text_button_form"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
    />

</LinearLayout>