<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.dashboard.DashboardFragment"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

    <TextView
            android:text="@string/title_form"

            android:textSize="32sp"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:layout_marginBottom="15dp"

            android:layout_gravity="center_horizontal" />


    <TextView

            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:layout_gravity="center|start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:gravity="center" />

    <Button
            android:id="@+id/main_button_form"
            android:text="@string/text_button_form"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal" />

    <Button
            android:id="@+id/main_button_form2"
            android:text="@string/text_button_form2"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal" />

    <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="2"

            android:gravity="center"
            android:layout_gravity="center" />
</LinearLayout>